--- a/styles/about_me.css
+++ b/styles/about_me.css
@@ -68,9 +68,9 @@
 }
 
 .timeline {
-    width: 60%; /* Compress the timeline to the right 60% of the screen */
+    width: 50%; /* Compress the timeline to the right 50% of the screen */
     box-sizing: border-box; /* Include padding and border in element's total width and height */
-    position: relative; /* Set position to relative */
+    position: absolute; /* Set position to absolute */
     margin-top: 20px; /* Add margin to the top for spacing */
     margin-left: auto; /* Align the timeline to the right */
 }
@@ -97,14 +97,18 @@
     align-items: center;
     justify-content: center;
     color: #fff; /* Set icon color */
-    margin-right: 20px; /* Fixed distance between the icon and the text box */
 }
 
 .timeline-content {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 60%; /* Set the width to fill 60% of the container */
+    padding: 20px; /* Add padding for spacing */
+    background-color: #c2d7d0; /* Set background color */
+    border: 1px solid #ccc; /* Add border */
+    border-radius: 10px; /* Add border radius */
+    display: flex;
+    align-items: center;
+    margin-right: 20px; /* Increase the distance between the content and the edge of the page */
+    position: relative; /* Set position to relative for pseudo-element */
+    box-shadow: 10px 10px #124943; /* Add a large shadow with color #124943 */
     margin-left: auto; /* Align the content to the right */
 }
